// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match should have consistent console output 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Users from google: a, b, c, d",
    ],
    Array [
      "Users from github: a, b, c, d",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`missmatch should add users if set to 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Set {
        "d",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`missmatch should have consistent console output 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Users from google: a, d",
    ],
    Array [
      "Users from github: b, c, a",
    ],
    Array [
      "Users not in github: d",
    ],
    Array [
      "Users not in google: b, c",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`missmatch should have consistent console output with full destructive mode on 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Users from google: a, d",
    ],
    Array [
      "Users from github: b, c, a",
    ],
    Array [
      "Users not in github: d",
    ],
    Array [
      "Users not in google: b, c",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`missmatch should remove users if set to 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Set {
        "b",
        "c",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
